--- a/intro.html
+++ b/intro.html
@@ -11,7 +11,7 @@
     <title>다이닝 4조참치</title>
     <style>
         body {
-            background: rgb(244, 241, 235);
+            background: white;
             height: 800vh;
         }
 
@@ -45,9 +45,8 @@
             color: black;
             text-align: left;
             height: 100vh;
-            background: url('image/4조참치_2트.png') no-repeat left top 30px;
+            background: linear-gradient(white 60vh, rgb(178, 224, 234) 100%);
             margin-left: 30px;
-            background-size: 200px;
             opacity: 1;
             transition: opacity 2s ease-in-out, transform 2s ease;
         }
@@ -103,7 +102,7 @@
         .section2 {
             width: 100%;
             height: 100vh;
-            background-image: linear-gradient(to bottom, rgb(244, 241, 235), rgb(65, 185, 211));
+            background-image: linear-gradient(to bottom, rgb(178, 224, 234), rgb(65, 185, 211));
             opacity: 1;
         }
 
