detail 공통 작업 수행

--- a/detail_su.html
+++ b/detail_su.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>팀원소개-김승수</title>
+    <title>다이닝 4조참치 메뉴소개 김승수</title>
 
     <!-- 부트스트랩 가져오기 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -56,7 +56,6 @@
         }
 
         .IntroImfor {
-            /* background-color: yellow; */
             height: 500px;
             width: 50%;
             display: flex;
@@ -65,7 +64,6 @@
         }
 
         .ImforName {
-            /* background-color: red; */
             height: 100px;
             width: 100%;
             margin-bottom: 10%;
