규리 상세페이지 완성

--- a/intro.html
+++ b/intro.html
@@ -290,7 +290,7 @@
         <h1>Welcome</h1>
     </div>
     <div class="section1">
-        <h2>먼 발걸음 주셔서 감사합니다. 깃테스트</h2>
+        <h2>먼 발걸음 주셔서 감사합니다.</h2>
         <h2>저희 4조참치는 손님께 최고의 경험을 제공해드리고자 합니다.</h2>
         <img src="image/아래화살표.png" alt="Scroll Down">
     </div>
