규리 상세페이지 완성

--- a/detail_ri.html
+++ b/detail_ri.html
@@ -211,7 +211,13 @@
             </div>
             <hr size="4px" color="#cfc6bc">
             <div class="ImforText">
-                <!-- 여기에 자기 소개 멘트를 써주세요 -->
+                서울 건대 근처 거주하는 26살 화석 대학생입니다. 경제학과 컴퓨터공학을 복수전공하고있어요.
+
+                금융권 IT, 핀테크 기업(토스)에 관심이 많습니다. 열심히 배우고, 백엔드 개발자로 시작하여 최종적으로는 풀스택 개발자가 되려고 합니다. 최종적인 목표는 창업이예요.
+
+                여기서 좋은 분들 많이 만나서 개발자 커리어 쌓아나가는데 있어 좋은 동료들을 만나고, 좋은 동료가 되어드리고 싶습니다.
+
+                질문 및 기타 잡담 환영입니다.
             </div>
             <hr size="4px" color="#cfc6bc">
             <div class="ImforPrice"><span style="font-size: 20px; color: #FACC2E">(\ 4,000,000,000,000)</span> 4조<spen
