--- a/main.html
+++ b/main.html
@@ -55,25 +55,26 @@
         }
 
 
-        .introtitle {
+        /* .introtitle {
             margin-top: 80px;
-        }
+        } */
 
         .maintitle {
+            margin-top: 80px;
             margin-bottom: 100px;
 
         }
 
         /*가상클래스 - 커서 올리면 색깔 바뀌도록*/
-        .introtitle>h5,
+        /* .introtitle>h5, */
         .maintitle>h1 {
             transition-property: color;
             transition-duration: 0.3s;
         }
 
-        .introtitle>h5:hover {
+        /* .introtitle>h5:hover {
             color: grey;
-        }
+        } */
 
         .maintitle>h1:hover {
             color: rgb(14, 111, 223);
@@ -165,7 +166,7 @@
         .footer {
             text-align: right;
             background-color: rgba(139, 232, 255, 0.3);
-            height: 80px;
+            height: 90px;
         }
 
         .row {
@@ -182,8 +183,11 @@
             }
         }
 
+        /* 태그버튼 테두리 */
         .btn {
-            opacity: 0.4
+            opacity: 0.4;
+            border-width : 4px;
+            border-color: white;
         }
     </style>
 
@@ -194,13 +198,13 @@
 
 <body>
     <div class="logo">
-        <img class="logoImage"
+        <img class="logoImage cursorChange" onclick="location.href='intro.html'"
             src="https://www.notion.so/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F83c75a39-3aba-4ba4-a792-7aefe4b07895%2F411868d5-32a5-4a27-9d92-2d8767e8f430%2FUntitled.png?table=block&id=bac55425-c72d-46dc-a009-b7605abc1b34&spaceId=83c75a39-3aba-4ba4-a792-7aefe4b07895&width=2000&userId=d7ef0868-ed79-4d87-aa6a-2180b6ad46eb&cache=v2">
     </div>
     <div class="header">
-        <div class="introtitle">
+        <!-- <div class="introtitle">
             <h5 class="cursorChange" onclick="location.href='intro.html'">Intro</h5>
-        </div>
+        </div> -->
         <div class="maintitle">
             <h1>메뉴판</h1>
         </div>
@@ -230,7 +234,7 @@
                         <p class="card-text">₩ 4,000,000,000,000</p>
 
                         <!-- 태그는 짧은 글자로 세 개까지! -->
-                        <div class="hashtag row row-cols-1 row-cols-md-4 g-0 gap-2 justify-content-center">
+                        <div class="hashtag row row-cols-1 row-cols-md-3 g-0 gap-0 justify-content-center">
                             <p class="btn rounded-pill px-1">
                                 #ISTJ</p>
                             <p class="btn rounded-pill px-1">
@@ -260,7 +264,7 @@
                         <p class="card-text">₩ 4,000,000,000,000</p>
 
                         <!-- 태그는 짧은 글자로 세 개까지! -->
-                        <div class="hashtag row row-cols-1 row-cols-md-4 g-0 gap-2 justify-content-center">
+                        <div class="hashtag row row-cols-1 row-cols-md-3 g-0 gap-0 justify-content-center">
                             <p class="btn rounded-pill px-1">
                                 #ISFJ</p>
                             <p class="btn rounded-pill px-1">
@@ -278,7 +282,7 @@
             <div class="col">
                 <div class="card h-100">
                     <div class="card-img cursorChange" onclick="location.href='detail_yoon.html'">
-                        <img src="https://images.unsplash.com/photo-1604909052743-94e838986d24?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        <img src="https://teamsparta.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F83c75a39-3aba-4ba4-a792-7aefe4b07895%2F6bf79fe0-69c2-4b49-af6c-963107c1734c%2FIMG_1296_2.jpg?table=block&id=0c8b31d2-2207-46f7-8733-c6424cbf3fc9&spaceId=83c75a39-3aba-4ba4-a792-7aefe4b07895&width=1480&userId=&cache=v2"
                             class="card-img-top" alt="...">
                     </div>
                     <span class="bestIcon">BEST</span>
@@ -287,13 +291,13 @@
                         <p class="card-text">₩ 4,000,000,000,000</p>
 
                         <!-- 태그는 짧은 글자로 세 개까지! -->
-                        <div class="hashtag row row-cols-1 row-cols-md-4 g-0 gap-2 justify-content-center">
+                        <div class="hashtag row row-cols-1 row-cols-md-3 g-0 gap-0 justify-content-center">
                             <p class="btn rounded-pill px-1" type="button">
-                                #</p>
+                                #ENFP</p>
                             <p class="btn rounded-pill px-1" type="button">
-                                #</p>
+                                #여행</p>
                             <p class="btn rounded-pill px-1" type="button">
-                                #</p>
+                                #영화감상</p>
                         </div>
 
                     </div>
@@ -313,7 +317,7 @@
                         <p class="card-text">₩ 4,000,000,000,000</p>
 
                         <!-- 태그는 짧은 글자로 세 개까지! -->
-                        <div class="hashtag row row-cols-1 row-cols-md-4 g-0 gap-2 justify-content-center">
+                        <div class="hashtag row row-cols-1 row-cols-md-3 g-0 gap-0 justify-content-center">
                             <p class="btn rounded-pill px-1">
                                 #INFP</p>
                             <p class="btn rounded-pill px-1">
@@ -339,7 +343,7 @@
                         <p class="card-text">₩ 4,000,000,000,000</p>
 
                         <!-- 태그는 짧은 글자로 세 개까지! -->
-                        <div class="hashtag row row-cols-1 row-cols-md-4 g-0 gap-2 justify-content-center">
+                        <div class="hashtag row row-cols-1 row-cols-md-3 g-0 gap-0 justify-content-center">
                             <p class="btn rounded-pill px-1">
                                 #INTP</p>
                             <p class="btn rounded-pill px-1">
@@ -452,7 +456,7 @@
 
     <footer class="footer mt-auto py-3 bg-body-tertiary">
         <div class="container">
-            <span class="text-body-secondary">4조참치</span>
+            <!-- <span class="text-body-secondary">4조참치</span> -->
         </div>
     </footer>
 </body>
