--- a/intro.html
+++ b/intro.html
@@ -143,7 +143,7 @@
             margin: 0px 0px 0px 80px;
         }
 
-        .section1 h1, .section1 h3 {
+        h1, h3 {
             opacity: 0;
             transform: translateY(20px);
             animation: fadeInUp 1.5s ease forwards;
@@ -151,11 +151,11 @@
             transition: transform 2s ease-in-out;
         }
 
-        .section1 h1:nth-child(1), .section1 h3:nth-child(1) {
+        h1:nth-child(1), h3:nth-child(1) {
             animation-delay: 1s;
         }
 
-        .section1 h1:nth-child(2), .section1 h3:nth-child(2) {
+        h1:nth-child(2), h3:nth-child(2) {
             animation-delay: 3s;
             margin-bottom: 8rem;
         }
@@ -315,7 +315,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 60vh; /* 높이 설정, 필요에 따라 조정 가능 */
+            height: 60vh; 
             background-image: linear-gradient(to bottom, rgba(255,255,255,0) 50%, white 100%), url('/image/tuna01.jpeg');
             background-size: cover;
             background-position: center;
@@ -328,10 +328,10 @@
         }
 
         .top_logo {
-            position: absolute; /* 로고를 화면에 고정 */
-            top: 20px; /* 상단에서 20px의 여백 */
-            left: 50px; /* 좌측에서 20px의 여백 */
-            z-index: 1000; /* 다른 요소들 위에 표시 */
+            position: absolute; 
+            top: 20px;
+            left: 50px; 
+            z-index: 1000; 
             height: 120px;
         }
 
@@ -344,7 +344,17 @@
         }
 
         .section5 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center; 
+            color: rgb(94, 91, 91);
+            text-align: center; 
             height: 60vh;
+            background: linear-gradient(white 60vh, rgb(178, 224, 234) 100%);
+            opacity: 1;
+            transition: opacity 2s ease-in-out, transform 2s ease;
+            padding-left: 80px; 
         }
 
         .section6 {
@@ -392,7 +402,7 @@
                 if (scrT >= $(document).height() - $(window).height() - 10) {
                     sessionStorage.setItem('first', 'first');
                     history.pushState(null, "");
-                    window.location.href = 'main.html';
+                    //window.location.href = 'main.html';
                 }
             });
         }
@@ -435,6 +445,19 @@
         <h1>여러분들의 직원, 동료, 후배 혹은 대표가 되어 함께 솟아오를,</h1>
         <h1>저희는 바로…</h1>
     </div>
+
+    <div class="section6">
+        <h1>사조참치!</h1>
+    </div>
+
+    <div class="section7">
+        <h1>저희 사조참치는 약속합니다</h1>
+    </div>
+
+    <div class="section8">
+        <h1>준비된 사조참치 보러가기</h1>
+    </div>
+
     
     <!-- <img class="logo" src="image/4조참치_2트.png" alt="4조참치 로고">
     <div class="top-text">
