--- a/intro.html
+++ b/intro.html
@@ -316,7 +316,7 @@
             left: 0;
             width: 100%;
             height: 60vh; 
-            background-image: linear-gradient(to bottom, rgba(255,255,255,0) 50%, white 100%), url('/image/tuna01.jpeg');
+            background-image: linear-gradient(to bottom, rgba(255,255,255,0) 50%, white 100%), url('./image/tuna01.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -362,7 +362,7 @@
             height: 100vh;
             background-image: 
                 linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 20%),
-                url('/image/tuna02.jpeg'),
+                url('./image/tuna02.jpeg'),
                 linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 20%);
             background-size: cover;
             background-position: center;
