--- a/intro.html
+++ b/intro.html
@@ -300,7 +300,7 @@
             left: 0;
             width: 100%;
             height: 60vh; 
-            background-image: linear-gradient(to bottom, rgba(255,255,255,0) 50%, white 100%), url('/image/tuna01.jpeg');
+            background-image: linear-gradient(to bottom, rgba(255,255,255,0) 50%, white 100%), url('./image/tuna01.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -397,7 +397,7 @@
             margin-top: 100px;
             width: 100%;
             height: 100vh;
-            background-image: url('/image/promise.jpeg');
+            background-image: url('./image/promise.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -413,7 +413,7 @@
             margin-top: 90px;
             width: 100%;
             height: 80vh;
-            background-image: url('/image/tuna01.jpeg');
+            background-image: url('./image/tuna01.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -494,7 +494,7 @@
                 if (scrT >= $(document).height() - $(window).height() - 10) {
                     sessionStorage.setItem('first', 'first');
                     history.pushState(null, "");
-                    //window.location.href = 'main.html';
+                    window.location.href = 'main.html';
                 }
             });
         }
@@ -540,7 +540,7 @@
 
     <div class="section6">
         <div class="overlay-image">
-            <img src="/image/logo_new.png" alt="big_logo">
+            <img src="./image/logo_new.png" alt="big_logo">
         </div>
     </div>
     
