--- a/detail_yoon.html
+++ b/detail_yoon.html
@@ -187,13 +187,13 @@
 
     <div class="IntroMain">
         <div class="IntroImgArea">
-            <img src="" class="IntroImg"> <!-- "" 사이에 프로필 사진을 넣어주세요 -->
+            <img src="https://teamsparta.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2F83c75a39-3aba-4ba4-a792-7aefe4b07895%2F6bf79fe0-69c2-4b49-af6c-963107c1734c%2FIMG_1296_2.jpg?table=block&id=0c8b31d2-2207-46f7-8733-c6424cbf3fc9&spaceId=83c75a39-3aba-4ba4-a792-7aefe4b07895&width=1480&userId=&cache=v2" class="IntroImg">
         </div>
         <div class="IntroImfor">
             <div class="ImforName">
                 <div class="NameLabel">이름</div>
                 <div class="NameReal">노 상 윤</div>
-                <a href='' target="_blank" style="margin-right: 3%;"> <!-- href='' 사이에 깃허브 주소를 넣어주세요 -->
+                <a href='https://github.com/rohtable' target="_blank" style="margin-right: 3%;"> 
                     <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                         class="bi bi-github" viewBox="0 0 16 16">
                         <path
@@ -210,7 +210,9 @@
             </div>
             <hr size="4px" color="#cfc6bc">
             <div class="ImforText">
-                <!-- 여기에 자기 소개 멘트를 써주세요 -->
+                안녕하세요. 대전에 거주하고 있는 36살 노상윤입니다.<br/><br/>
+                IT 관련 학과를 나와 인터넷 신문 솔루션 제공 서비스와 전기바이크 서비스, 요식업체 운영 그리고 온라인 유통업 등을 거쳐 한층 더 성장하고자, 이 곳까지 도달했습니다.<br/><br/>
+                경험과 내배캠에서의 배움을 바탕으로, 이제는 글로벌한 서비스를 만들어 세계로의 진출을 꿈꾸고 있습니다. 많이 배우고 도우며 성장하겠습니다.
             </div>
             <hr size="4px" color="#cfc6bc">
             <div class="ImforPrice"><span style="font-size: 20px; color: #FACC2E">(\ 4,000,000,000,000)</span> 4조<spen
@@ -221,7 +223,7 @@
 
     <div class="IntroSide">
         <div style="margin-bottom: 20px;"><span style="border-left: black solid 10px; font-size: 30px;"><span
-                    style="margin-left: 20px; font-size: 30px;"> 영양성분[ MBTI - <span style="color: red;"><!-- 여기에 MBTI를 써주세요 --></span>
+                    style="margin-left: 20px; font-size: 30px;"> 영양성분[ MBTI - <span style="color: red;">ENFP</span>
                     ]</span></span></div>
         <div class="MBTItable">
             <table style="margin-right: 5%;">
@@ -232,44 +234,44 @@
                     <div class="MBTIsub">내향형</div>
                 </th>
                 <tr>
-                    <td> 1 </td>
-                    <td> 2 </td>
+                    <td> 6 </td>
+                    <td> 4 </td>
                 </tr>
             </table>
             <table style="margin-right: 5%;">
                 <th>S
                     <div class="MBTIsub">감각형</div>
                 </th>
-                <th>N
+                <th class="myMBTI">N
                     <div class="MBTIsub">직관형</div>
                 </th>
                 <tr>
                     <td> 3 </td>
-                    <td> 4 </td>
+                    <td> 7 </td>
                 </tr>
             </table>
             <table style="margin-right: 5%;">
                 <th>T
                     <div class="MBTIsub">사고형</div>
                 </th>
-                <th>F
+                <th class="myMBTI">F
                     <div class="MBTIsub">감정형</div>
                 </th>
                 <tr>
-                    <td> 1 </td>
-                    <td> 2 </td>
+                    <td> 3 </td>
+                    <td> 7 </td>
                 </tr>
             </table>
             <table>
                 <th>J
                     <div class="MBTIsub">판단형</div>
                 </th>
-                <th>P
+                <th class="myMBTI">P
                     <div class="MBTIsub">인식형</div>
                 </th>
                 <tr>
-                    <td> 1 </td>
                     <td> 2 </td>
+                    <td> 8 </td>
                 </tr>
             </table>
         </div>
@@ -282,7 +284,18 @@
                     style="margin-left: 20px; font-size: 30px;">원산지</span></span>
         </div>
         <div class="native">
-            <div class="nativeLocation" style="margin-right: 5%;"><!-- 여기에 주소지1을 써주세요 --><div class="nativeText"><!-- 여기에 거주년도1을 써주세요 --></div>
+            <div class="nativeLocation" style="margin-right: 5%;">전주<div class="nativeText">19년</div>
+            </div>
+
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
+                    class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
+                </svg>
+            </div>
+
+            <div class="nativeLocation" style="margin-left: 5%; margin-right: 5%;">서울<div class="nativeText">6년</div>
             </div>
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
@@ -291,17 +304,7 @@
                         d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
                 </svg>
             </div>
-            <div class="nativeLocation" style="margin-left: 5%; margin-right: 5%;"><!-- 여기에 주소지2을 써주세요 --><div class="nativeText"><!-- 여기에 거주년도2을 써주세요 -->
-                </div>
-            </div>
-            <div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                    class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
-                    <path
-                        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
-                </svg>
-            </div>
-            <div class="nativeLocation" style="margin-left: 5%;"><!-- 여기에 주소지3을 써주세요 --><div class="nativeText"><!-- 여기에 거주년도3을 써주세요 --></div>
+            <div class="nativeLocation" style="margin-left: 5%;">대전<div class="nativeText">10년</div>
             </div>
         </div>
 
@@ -317,14 +320,14 @@
                             class="bi bi-1-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
                             <path
                                 d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
-                        </svg><!-- 여기에 장점1을 써주세요 -->
+                        </svg>긍정적인 마인드
                     </div>
                     <div class="myList">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                                 class="bi bi-2-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
                                 <path
                                     d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
-                            </svg><!-- 여기에 장점2을 써주세요 -->
+                            </svg>도전 정신
                     </div>
                     <div class="myList">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
@@ -332,7 +335,7 @@
                                 <path
                                     d="M7.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
                                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
-                            </svg><!-- 여기에 장점3을 써주세요 -->
+                            </svg>끈질김
                     </div>
                 </div>
             </div>
@@ -347,14 +350,14 @@
                             class="bi bi-1-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
                             <path
                                 d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
-                        </svg> <!-- 여기에 협업 스타일1을 써주세요 -->
+                        </svg> 다양성 수용
                     </div>
                     <div class="myList">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                                 class="bi bi-2-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
                                 <path
                                     d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
-                            </svg> <!-- 여기에 협업 스타일2을 써주세요 -->
+                            </svg> 적극적인 자세
                     </div>
                     <div class="myList">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
@@ -362,7 +365,7 @@
                                 <path
                                     d="M7.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
                                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
-                            </svg> <!-- 여기에 협업 스타일3을 써주세요 -->
+                            </svg> 브레인 스토밍
                     </div>
                 </div>
             </div>
@@ -370,4 +373,4 @@
     </div>
 </body>
 
-</html>
+</html
