--- a/detail_ri.html
+++ b/detail_ri.html
@@ -13,6 +13,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <style>
+        @font-face {
+            font-family: 'SokchoBadaDotum';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_1@1.0/SokchoBadaDotum.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        @font-face {
+            font-family: 'WavvePADO-Regular';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2404@1.0/WavvePADO-Regular.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        * {
+            font-family: 'SokchoBadaDotum';
+        }
+
         body {
             background-color: skyblue;
             padding: 0px 100px 0px 100px;
@@ -81,7 +99,15 @@
             margin-right: 10%;
         }
 
+        .ImforIcon {
+            background-color: #FACC2E;
+            font-size: 22px;
+            border-radius: 5px;
+            float: right;
+        }
+
         .ImforText {
+            font-family: 'WavvePADO-Regular';
             height: 175px;
             width: 100%;
             overflow: auto;
@@ -95,7 +121,7 @@
             font-weight: bold;
         }
 
-        .IntroSide {
+        .IntroSide1 {
             background-color: white;
             padding: 100px;
             margin-bottom: 100px;
@@ -116,12 +142,15 @@
             text-align: center;
         }
 
+        tr {
+            height: 70px;
+        }
+
         th {
             border: #cfc6bc solid 1px;
             font-size: 30px;
         }
 
-        tr,
         td {
             border: #cfc6bc solid 1px;
             font-size: 20px;
@@ -139,11 +168,12 @@
         .native {
             display: flex;
             justify-content: center;
-            margin-bottom: 50px;
         }
 
         .nativeLocation {
             font-size: 25px;
+            width: 15%;
+            text-align: center;
         }
 
         .nativeText {
@@ -153,9 +183,12 @@
             color: #cfc6bc;
         }
 
-        .myImfor {
+        .IntroSide2 {
             display: flex;
             justify-content: center;
+            padding: 100px;
+            margin-bottom: 100px;
+            background-color: white;
         }
 
         .myStyle {
@@ -169,6 +202,7 @@
         .myList {
             margin-bottom: 100px;
             font-size: 25px;
+            font-family: 'WavvePADO-Regular';
         }
     </style>
 
@@ -181,7 +215,7 @@
 <body>
     <div class="TopArea">
         <img src="image/4조참치_2트.png" type="button" onclick="location.href='intro.html'"
-            style="width: 100px; height: 50px;">
+            style="width: 150px; height: 75px;">
         <div type="button" onclick="location.href='main.html'" class="menubtn">메뉴판</div>
     </div>
 
@@ -194,20 +228,20 @@
             <div class="ImforName">
                 <div class="NameLabel">이름</div>
                 <div class="NameReal">유 규 리</div>
-                <a href='https://github.com/yuguri76' target="_blank" style="margin-right: 3%;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
-                        class="bi bi-github" viewBox="0 0 16 16">
-                        <path
-                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
-                    </svg> Github</a>
-                <a href='https://velog.io/@ysy9976/posts' target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
+                <a href="https://velog.io/@ysy9976/posts" target="_blank" class="ImforIcon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                         class="bi bi-bootstrap" viewBox="0 0 16 16">
                         <path
                             d="M5.062 12h3.475c1.804 0 2.888-.908 2.888-2.396 0-1.102-.761-1.916-1.904-2.034v-.1c.832-.14 1.482-.93 1.482-1.816 0-1.3-.955-2.11-2.542-2.11H5.062zm1.313-4.875V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23zm0 3.762V8.162h1.822c1.236 0 1.887.463 1.887 1.348 0 .896-.627 1.377-1.811 1.377z" />
                         <path
                             d="M0 4a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4zm4-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V4a3 3 0 0 0-3-3z" />
                     </svg> Blog</a>
+                <a href="https://github.com/yuguri76" target="_blank" style="margin-right: 2%;" class="ImforIcon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-github" viewBox="0 0 16 16">
+                        <path
+                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                    </svg> Github</a>
             </div>
             <hr size="4px" color="#cfc6bc">
             <div class="ImforText">
@@ -226,17 +260,17 @@
         </div>
     </div>
 
-    <div class="IntroSide">
+    <div class="IntroSide1">
         <div style="margin-bottom: 20px;"><span style="border-left: black solid 10px; font-size: 30px;"><span
                     style="margin-left: 20px; font-size: 30px;"> 영양성분[ MBTI - <span
-                        style="color: red;"><!-- 여기에 MBTI를 써주세요 --></span>
+                        style="color: red;">INTP<!-- 여기에 MBTI를 써주세요 --></span>
                     ]</span></span></div>
         <div class="MBTItable">
             <table style="margin-right: 5%;">
-                <th class="myMBTI">E
+                <th>E
                     <div class="MBTIsub">외향형</div>
                 </th>
-                <th>I
+                <th class="myMBTI">I
                     <div class="MBTIsub">내향형</div>
                 </th>
                 <tr>
@@ -248,7 +282,7 @@
                 <th>S
                     <div class="MBTIsub">감각형</div>
                 </th>
-                <th>N
+                <th class="myMBTI">N
                     <div class="MBTIsub">직관형</div>
                 </th>
                 <tr>
@@ -257,7 +291,7 @@
                 </tr>
             </table>
             <table style="margin-right: 5%;">
-                <th>T
+                <th class="myMBTI">T
                     <div class="MBTIsub">사고형</div>
                 </th>
                 <th>F
@@ -272,7 +306,7 @@
                 <th>J
                     <div class="MBTIsub">판단형</div>
                 </th>
-                <th>P
+                <th class="myMBTI">P
                     <div class="MBTIsub">인식형</div>
                 </th>
                 <tr>
@@ -290,17 +324,17 @@
                     style="margin-left: 20px; font-size: 30px;">원산지</span></span>
         </div>
         <div class="native">
-            <div class="nativeLocation" style="margin-right: 5%;">경북 구미시
-                <div class="nativeText">생산~숙성 23년차</div>
+            <div class="nativeLocation">구미
+                <div class="nativeText">생산 ~ 숙성 23년</div>
             </div>
-            <div>
+            <div style="margin: 0% 3% 0% 3%;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
                     class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
                     <path
                         d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
                 </svg>
             </div>
-            <div class="nativeLocation" style="margin-left: 5%; margin-right: 5%;"> 서울
+            <div class="nativeLocation"> 서울
                 <div class="nativeText">숙성 24년차~
                 </div>
             </div>
@@ -310,71 +344,71 @@
                     <path
                         d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
                 </svg>
+            </div>
+            <div class="nativeLocation">
+                <div class="nativeText"></div>
             </div> -->
-            <div class="nativeLocation" style="margin-left: 5%;"><!-- 여기에 주소지3을 써주세요 -->
-                <div class="nativeText"><!-- 여기에 거주년도3을 써주세요 --></div>
+        </div>
+    </div>
+
+    <div class="IntroSide2">
+        <div style="margin-right: 5%;">
+            <div style="margin-bottom: 20px; text-align: left;"><span
+                    style="border-left: black solid 10px; font-size: 30px;"><span
+                        style="margin-left: 20px; font-size: 30px;">나의 장점</span></span>
+            </div>
+            <div class="myStyle">
+                <div class="myList">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-1-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
+                        <path
+                            d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
+                    </svg>I치고는 외향적인 척 잘함
+                </div>
+                <div class="myList">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-2-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
+                        <path
+                            d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
+                    </svg>책임감이 강함
+                </div>
+                <div class="myList">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-3-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
+                        <path
+                            d="M7.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
+                    </svg>오래 잘 앉아있음
+                </div>
             </div>
         </div>
-
-        <div class="myImfor">
-            <div style="margin-right: 5%;">
-                <div style="margin-bottom: 20px; text-align: center;"><span
-                        style="border-left: black solid 10px; font-size: 30px;"><span
-                            style="margin-left: 20px; font-size: 30px;">나의 장점</span></span>
-                </div>
-                <div class="myStyle">
-                    <div class="myList">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                            class="bi bi-1-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
-                            <path
-                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
-                        </svg>I치고는 외향적인 척 잘함
-                    </div>
-                    <div class="myList">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                            class="bi bi-2-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
-                            <path
-                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
-                        </svg>책임감이 강함
-                    </div>
-                    <div class="myList">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                            class="bi bi-3-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
-                            <path
-                                d="M7.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
-                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
-                        </svg>오래 잘 앉아있음
-                    </div>
-                </div>
+        <div>
+            <div style="margin-bottom: 20px; text-align: left;"><span
+                    style="border-left: black solid 10px; font-size: 30px;"><span
+                        style="margin-left: 20px; font-size: 30px;">나의 협업 스타일</span></span>
             </div>
-            <div>
-                <div style="margin-bottom: 20px; text-align: center;"><span
-                        style="border-left: black solid 10px; font-size: 30px;"><span
-                            style="margin-left: 20px; font-size: 30px;">나의 협업 스타일</span></span>
+            <div class="myStyle">
+                <div class="myList">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-1-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
+                        <path
+                            d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
+                    </svg>꼼꼼함(디테일 변태, 예외 잘 찾아냄)
                 </div>
-                <div class="myStyle">
-                    <div class="myList">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                            class="bi bi-1-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
-                            <path
-                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
-                        </svg>꼼꼼함(디테일 변태, 예외 잘 찾아냄)
-                    </div>
-                    <div class="myList">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                            class="bi bi-2-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
-                            <path
-                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
-                        </svg> 목적의식이 강함
-                    </div>
-                    <div class="myList">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                            class="bi bi-3-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
-                            <path
-                                d="M7.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
-                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
-                        </svg> 적극적인 의사소통
-                    </div>
+                <div class="myList">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-2-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
+                        <path
+                            d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306" />
+                    </svg> 목적의식이 강함
+                </div>
+                <div class="myList">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-3-circle" viewBox="0 0 16 16" style="margin-right: 10px;">
+                        <path
+                            d="M7.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318" />
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
+                    </svg> 적극적인 의사소통
                 </div>
             </div>
         </div>
