배율롤백, 로고수정 색감통일

--- a/detail_jeong.html
+++ b/detail_jeong.html
@@ -337,7 +337,7 @@
                 </svg>
             </div>
             <div class="nativeLocation">부산<!-- 여기에 주소지2을 써주세요 -->
-                <div class="nativeText">숙성 8년<!-- 여기에 거주년도2을 써주세요 -->
+                <div class="nativeText">숙성 5년<!-- 여기에 거주년도2을 써주세요 -->
                 </div>
             </div>
             <div style="margin: 0% 3% 0% 3%;">
@@ -347,8 +347,8 @@
                         d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
                 </svg>
             </div>
-            <div class="nativeLocation">서울<!-- 여기에 주소지3을 써주세요 -->
-                <div class="nativeText">숙성 3년차<!-- 여기에 거주년도3을 써주세요 --></div>
+            <div class="nativeLocation">남해<!-- 여기에 주소지3을 써주세요 -->
+                <div class="nativeText">숙성 3년<!-- 여기에 거주년도3을 써주세요 --></div>
             </div>
             <div style="margin: 0% 3% 0% 3%;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
@@ -357,8 +357,8 @@
                         d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
                 </svg>
             </div>
-            <div class="nativeLocation">00<!-- 여기에 주소지4을 써주세요 -->
-                <div class="nativeText">숙성 0년차<!-- 여기에 거주년도4을 써주세요 --></div>
+            <div class="nativeLocation">서울<!-- 여기에 주소지4을 써주세요 -->
+                <div class="nativeText">숙성 3년차<!-- 여기에 거주년도4을 써주세요 --></div>
             </div>
         </div>
     </div>
